# SceneSegmentation

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
data/depth/: blender_1.exr  blender_1.tif
data/scripts/: blender_camera_parameters.py  depth2normal.py  edge_detect_process.m  edge_detect_process.m~  proto_contour_opr.m  proto_contour_opr.m~  proto_norm_contours.m  proto_norm_contours.m~  test_contour_segment.m
data/scripts/edge_prototyping/: contour_detect.py  depth2normal.py
data/shaders/: bilateral_blur.fs  black_n_white.fs  depth_normals.fs  gradientxy.fs  median_blur.fs  point_cloud.vs  shader_1.fs  shader_1.vs  sobel.fs
src/: app.cpp  context.cpp  context.h  contour_processor.cpp  contour_processor.h  cuda_bilateral_filter.h  cuda_ransac.cu  cuda_ransac_kernel.h  cuda_sobel_filter.h  frame.cpp  frame.h  gl_edge_disc_filter.cpp  gl_edge_disc_filter.h  kinect_bridge_producer.cpp  kinect_bridge_producer.h  operator_sobel.cu  pipeline.cpp  pipeline.h  shader.cpp  shader.hpp  simple_image_producer.h  simple_viewer_consumer.h
src/component/: contour_policy.cpp  contour_policy.h  cu_contour_opr.h  cuda_contour_operations.cu  cuda_depth_img_opr.cu  cuda_depth_img_opr.h  cuda_depth_img_opr_impl.h  depth_img_policy.cpp  depth_img_policy.h  framereceiverpolicy.cpp  framereceiverpolicy.h  pipeline_policy.h
src/context/: context.cpp  context.h  context_factory.cpp  context_factory.h
src/dataflow/: cuda_sobel_pipe_filter.cu  cuda_sobel_pipe_filter.h  frame_observer.cpp  frame_observer.h  observer.cpp  observer.h  pipeline.cpp  pipeline.h  pipeline_filter.cpp  pipeline_filter.h  queue_client.h  upper_string_pipe_filter.h
src/draw/: drawable.cpp  drawable.h  line_pair.cpp  line_pair.h  line_sgmnt.cpp  line_sgmnt.h
src/filter/: contour_processor.cpp  contour_processor.h  cuda_bilateral_filter.cpp  cuda_bilateral_filter.h  cuda_bilateral_filter_kernel.cu  cuda_sobel_filter.cpp  cuda_sobel_filter_kernel.cu  cuda_sobel_filter_kernel.h  filtermanager.cpp  filtermanager.h  frame_output_filter.cpp  frame_output_filter.h  gl_depth_img_filter.cpp  gl_depth_img_filter.h  gl_edge_disc_filter.cpp  gl_edge_disc_filter.h  k4a_bridge_producer.cpp  k4a_bridge_producer.h  kinect_bridge_producer.cpp  kinect_bridge_producer.h  simple_image_producer.h  simple_source_producer_config.h  simple_viewer_consumer.h
src/gui/: application.cpp  application.hpp  configcontrollerinterface.cpp  configcontrollerinterface.h  dockcontrol.cpp  dockcontrol.h  imgui_all.h  imguiextensions.cpp  imguiextensions.h  simplesourceproducerconfigcontroller.cpp  simplesourceproducerconfigcontroller.h  sourceselectiondockcontrol.cpp  sourceselectiondockcontrol.h  viewersettingsmanager.cpp  viewersettingsmanager.h  visualizationwindow.cpp  visualizationwindow.h  windowdock.cpp  windowdock.h  windowmanager.cpp  windowmanager.h  windowmanger.cpp  windowmanger.h  windowsizehelper.h  windowsizehelpers.h
src/res/: resource_mgr.cpp  resource_mgr.h
src/utils/: cuda_helper.cu  cuda_helper.cuh  helper.cpp  helper.h  wiener_filter.cpp
src/viewer/: gl_camera.cpp  gl_camera.h  gl_viewport.cpp  gl_viewport.h
test/: CMakeLists.txt  ViewerApp_test.cpp  application_gui.cpp  context_tests.cpp  cuda_contour_operation_test.cpp  cuda_sobel_filter_test.cpp  filesourceproducertest.cpp  filtermanagertest.cpp  freenect_filter_test.cpp  pipeline_tests.cpp
